# HTIC-TASKS

encrypt/src/: main.cpp
oddeven/src/: alternate_even_odd.cpp
videocapture/: CMakeLists.txt
videocapture/src/: main.cpp
