cmake_minimum_required(VERSION 3.20)

project(videocapture LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenCV REQUIRED)

add_executable(videocapture
    src/main.cpp
)

target_link_libraries(videocapture PRIVATE ${OpenCV_LIBS})
target_include_directories(videocapture PRIVATE ${OpenCV_INCLUDE_DIRS})
